--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "pdfjs-dist": "^2.5.207",
     "pdfmake": "^0.1.65",
     "register-service-worker": "^1.7.1",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-pdf": "^4.2.0",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.4.0"
