--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-custom-scrollbar": "^1.4.0",
     "vue-pdf": "^4.2.0",
     "vue-router": "^3.2.0",
+    "vue-scroll": "^2.1.13",
     "vuelidate": "^0.7.5",
     "vuex": "^3.4.0"
   },
@@ -24,6 +26,7 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "vue-friendly-iframe": "^0.18.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
