--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,5 +1,7 @@
 {
-    "default": {
+
+
+    "alua": {
         "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
         "custom_api_url": "http://localhost:8082",
         "style": {
@@ -20,8 +22,140 @@
         },
         "banner": [
             {
+                "url": "http://www.zoetryresorts.com/en_us/home.html",
+                "img": "../img/banners/zoetry_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.secretsresorts.com/en_us/home.html",
+                "img": "../img/banners/secrets_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.breathlessresorts.com/en_us/home.html",
+                "img": "../img/banners/breathless_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.dreamsresorts.com/en_us/home.html",
+                "img": "../img/banners/dreams_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.nowresorts.com/",
+                "img": "../img/banners/now_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.reflectresorts.com/en_us/home.html",
+                "img": "../img/banners/reflect_black.png",
+                "width": ""
+            },
+            {
                 "url": "https://www.aluahotels.com/",
-                "img": "../img/banners/bandalogos_footer.png",
+                "img": "../img/banners/alua_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.sunscaperesorts.com/",
+                "img": "../img/banners/sunscape_black.png",
+                "width": ""
+            }
+        ],
+        "hotels": [
+            {
+                "id": "H20",
+                "title": "HOTEL VILLAGE",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"],
+                "api_url": "saddsad"
+            },
+            {
+                "id": "H22",
+                "title": "H22",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"],
+                "api_url": ""
+            }
+        ],
+        "camposObligatorios": {
+            "nombre": true,
+            "primer_apellido": true,
+            "segundo_apellido": false,
+            "tipo_doc": true,
+            "num_documento": true,
+            "fecha_expedicion": true,
+            "fecha_nacimiento": true,
+            "pais_nacimiento": true,
+            "pais": true,
+            "email": false,
+            "sexo": true,
+            "direccion": false,
+            "poblacion": false,
+            "provincia": false,
+            "codigo_postal": false,
+            "acepta_terminos": false
+        }
+              
+    },
+
+
+    "dreamseu": {
+        "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
+        "custom_api_url": "http://localhost:8082",
+        "style": {
+            "URL_IMAGEN_FONDO": "../img/backgrounds/Fondo_Dreams.jpg",
+            "URL_LOGO_MARCA": "../img/banners/dreams_white.png",
+            "COLOR_FONDO_CUADRO_FORMULARIO": "#c7b378",
+            "COLOR_BOTON": "#ece3d1",
+            "COLOR_TEXTO_BOTON": "#676158",
+            "COLOR_ICONO_GRIS": "#495057",
+            "COLOR_BOTON_EDITAR": "",
+            "COLOR_BOTON_BORRAR": ""
+        },
+        "showBanner": 1,
+        "colorBrand": "rgb(255 255 255 / 57%)",
+        "bannerHeader": {
+            "url": "http://www.amresortseu.com/",
+            "img": "../img/banners/amr_black.png"
+        },
+        "banner": [
+            {
+                "url": "http://www.zoetryresorts.com/en_us/home.html",
+                "img": "../img/banners/zoetry_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.secretsresorts.com/en_us/home.html",
+                "img": "../img/banners/secrets_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.breathlessresorts.com/en_us/home.html",
+                "img": "../img/banners/breathless_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.dreamsresorts.com/en_us/home.html",
+                "img": "../img/banners/dreams_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.nowresorts.com/",
+                "img": "../img/banners/now_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.reflectresorts.com/en_us/home.html",
+                "img": "../img/banners/reflect_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.aluahotels.com/",
+                "img": "../img/banners/alua_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.sunscaperesorts.com/",
+                "img": "../img/banners/sunscape_black.png",
                 "width": ""
             }
         ],
@@ -55,22 +189,291 @@
             "codigo_postal": false,
             "acepta_terminos": false
         }
-              
     },
-    "alua": {
+
+
+    "secretseu": {
         "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
-        "custom_api_url": "http://localhost:8081",
+        "custom_api_url": "http://localhost:8082",
         "style": {
-            "URL_IMAGEN_FONDO": "https://i.pinimg.com/originals/f2/f0/cb/f2f0cb34e485e4be0407b3f1e588f187.jpg",
-            "URL_LOGO_MARCA": "https://previews.123rf.com/images/ikalvi/ikalvi1712/ikalvi171200406/92424242-logotipo-para-la-agencia-de-viajes-tropical-resort-beach-hotel-spa-s%C3%ADmbolo-de-vacaciones-de-verano-log.jpg",
-            "COLOR_FONDO_CUADRO_FORMULARIO": "#666666",
-            "COLOR_BOTON": "#ff8800",
-            "COLOR_TEXTO_BOTON": "blue"  
+            "URL_IMAGEN_FONDO": "../img/backgrounds/Fondo_Secrets.jpg",
+            "URL_LOGO_MARCA": "../img/banners/secrets_white.png",
+            "COLOR_FONDO_CUADRO_FORMULARIO": "#322f28",
+            "COLOR_BOTON": "#cfab66",
+            "COLOR_TEXTO_BOTON": "#746e63",
+            "COLOR_ICONO_GRIS": "#495057",
+            "COLOR_BOTON_EDITAR": "",
+            "COLOR_BOTON_BORRAR": ""
         },
+        "showBanner": 1,
+        "colorBrand": "rgb(255 255 255 / 57%)",
+        "bannerHeader": {
+            "url": "http://www.amresortseu.com/",
+            "img": "../img/banners/amr_black.png"
+        },
+        "banner": [
+            {
+                "url": "http://www.zoetryresorts.com/en_us/home.html",
+                "img": "../img/banners/zoetry_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.secretsresorts.com/en_us/home.html",
+                "img": "../img/banners/secrets_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.breathlessresorts.com/en_us/home.html",
+                "img": "../img/banners/breathless_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.dreamsresorts.com/en_us/home.html",
+                "img": "../img/banners/dreams_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.nowresorts.com/",
+                "img": "../img/banners/now_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.reflectresorts.com/en_us/home.html",
+                "img": "../img/banners/reflect_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.aluahotels.com/",
+                "img": "../img/banners/alua_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.sunscaperesorts.com/",
+                "img": "../img/banners/sunscape_black.png",
+                "width": ""
+            }
+        ],
         "hotels": [
-            {"id": "H20", "title": "Hotel 1"}
-        ]  
+            {
+                "id": "H20",
+                "title": "HOTEL VILLAGE",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"]
+            },
+            {
+                "id": "H22",
+                "title": "H22",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"]
+            }
+        ],
+        "camposObligatorios": {
+            "nombre": true,
+            "primer_apellido": true,
+            "segundo_apellido": false,
+            "tipo_doc": true,
+            "num_documento": true,
+            "fecha_expedicion": true,
+            "fecha_nacimiento": true,
+            "pais_nacimiento": true,
+            "pais": true,
+            "email": false,
+            "sexo": true,
+            "direccion": false,
+            "poblacion": false,
+            "provincia": false,
+            "codigo_postal": false,
+            "acepta_terminos": false
+        }
     },
+
+    "zoetryeu": {
+        "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
+        "custom_api_url": "http://localhost:8082",
+        "style": {
+            "URL_IMAGEN_FONDO": "../img/backgrounds/fondo_zoetry.jpg",
+            "URL_LOGO_MARCA": "../img/banners/zoetry_white.png",
+            "COLOR_FONDO_CUADRO_FORMULARIO": "#e6cb98",
+            "COLOR_BOTON": "#b37f20",
+            "COLOR_TEXTO_BOTON": "#514a46",
+            "COLOR_ICONO_GRIS": "#495057",
+            "COLOR_BOTON_EDITAR": "",
+            "COLOR_BOTON_BORRAR": ""
+        },
+        "showBanner": 1,
+        "colorBrand": "rgb(255 255 255 / 57%)",
+        "bannerHeader": {
+            "url": "http://www.amresortseu.com/",
+            "img": "../img/banners/amr_black.png"
+        },
+        "banner": [
+            {
+                "url": "http://www.zoetryresorts.com/en_us/home.html",
+                "img": "../img/banners/zoetry_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.secretsresorts.com/en_us/home.html",
+                "img": "../img/banners/secrets_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.breathlessresorts.com/en_us/home.html",
+                "img": "../img/banners/breathless_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.dreamsresorts.com/en_us/home.html",
+                "img": "../img/banners/dreams_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.nowresorts.com/",
+                "img": "../img/banners/now_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.reflectresorts.com/en_us/home.html",
+                "img": "../img/banners/reflect_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.aluahotels.com/",
+                "img": "../img/banners/alua_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.sunscaperesorts.com/",
+                "img": "../img/banners/sunscape_black.png",
+                "width": ""
+            }
+        ],
+        "hotels": [
+            {
+                "id": "H20",
+                "title": "HOTEL VILLAGE",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"],
+                "api_url": ""
+            },
+            {
+                "id": "H22",
+                "title": "H22",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"],
+                "api_url": ""
+            }
+        ],
+        "camposObligatorios": {
+            "nombre": true,
+            "primer_apellido": true,
+            "segundo_apellido": false,
+            "tipo_doc": true,
+            "num_documento": true,
+            "fecha_expedicion": true,
+            "fecha_nacimiento": true,
+            "pais_nacimiento": true,
+            "pais": true,
+            "email": false,
+            "sexo": true,
+            "direccion": false,
+            "poblacion": false,
+            "provincia": false,
+            "codigo_postal": false,
+            "acepta_terminos": false
+        }
+    },
+
+    "amresortseu": {
+        "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
+        "custom_api_url": "http://localhost:8082",
+        "style": {
+            "URL_IMAGEN_FONDO": "../img/backgrounds/fondo_generica.jpeg",
+            "URL_LOGO_MARCA": "../img/banners/amr_white.png",
+            "COLOR_FONDO_CUADRO_FORMULARIO": "#0c4e79 ",
+            "COLOR_BOTON": "#e6e1d3",
+            "COLOR_TEXTO_BOTON": "#746e63",
+            "COLOR_ICONO_GRIS": "#495057",
+            "COLOR_BOTON_EDITAR": "",
+            "COLOR_BOTON_BORRAR": ""
+        },
+        "showBanner": 1,
+        "colorBrand": "rgb(255 255 255 / 57%)",
+        "bannerHeader": {
+            "url": "http://www.amresortseu.com/",
+            "img": "../img/banners/amr_black.png"
+        },
+        "banner": [
+            {
+                "url": "http://www.zoetryresorts.com/en_us/home.html",
+                "img": "../img/banners/zoetry_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.secretsresorts.com/en_us/home.html",
+                "img": "../img/banners/secrets_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.breathlessresorts.com/en_us/home.html",
+                "img": "../img/banners/breathless_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.dreamsresorts.com/en_us/home.html",
+                "img": "../img/banners/dreams_black.png",
+                "width": ""
+            },
+            {
+                "url": "http://www.nowresorts.com/",
+                "img": "../img/banners/now_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.reflectresorts.com/en_us/home.html",
+                "img": "../img/banners/reflect_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.aluahotels.com/",
+                "img": "../img/banners/alua_black.png",
+                "width": ""
+            },
+            {
+                "url": "https://www.sunscaperesorts.com/",
+                "img": "../img/banners/sunscape_black.png",
+                "width": ""
+            }
+        ],
+        "hotels": [
+            {
+                "id": "H20",
+                "title": "HOTEL VILLAGE",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"]
+            },
+            {
+                "id": "H22",
+                "title": "H22",
+                "docs": ["Doc_1_H20_1_","Doc_2_H00_2_","policia_"]
+            }
+        ],
+        "camposObligatorios": {
+            "nombre": true,
+            "primer_apellido": true,
+            "segundo_apellido": false,
+            "tipo_doc": true,
+            "num_documento": true,
+            "fecha_expedicion": true,
+            "fecha_nacimiento": true,
+            "pais_nacimiento": true,
+            "pais": true,
+            "email": false,
+            "sexo": true,
+            "direccion": false,
+            "poblacion": false,
+            "provincia": false,
+            "codigo_postal": false,
+            "acepta_terminos": false
+        }
+    },
+
+
     "other": {
         "api_url": "http://iis.applelgeu.com:48082//AWWebAPI/api/aw/awa",
         "custom_api_url": "http://localhost:8081",
